feat: prototype send msg with socket closed #4